--- a/Personal-Portfolio/css/style.css
+++ b/Personal-Portfolio/css/style.css
@@ -1,34 +1,52 @@
-/*
-html, body {
-    height:100%;
-} 
-*/
-
-/*
-#image-overlay {
-	position:absolute;
-	height:100%;
-	width:100%;
-    top:0;right:0;bottom:0;left:0;
-    background:rgba(255,105,200,0.3);
-    z-index:1
+@media only screen and (max-width: 620px){
+	header ul {
+		display: block;
+		float: none;
+	}
+	header ul li { 
+		float: none;
+		border-top: 2px solid hotpink;
+	}
 }
-*/
 
 body {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    background:
-        linear-gradient(
-        rgba(255, 105, 200, 0.45), 
-        rgba(255, 105, 200, 0.45)),
-        url(../images/clean-closet.jpg);
-	background-size: cover;
     text-align: center;
+    position: relative;
+    data-spy: "scroll";
+    data-target: "nav";
 }
 
 header {
-    display: block;
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+    margin-bottom: 5px;
+    z-index: 999;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: rgba(255, 105, 200, 0.45);
+    border-bottom-color: black;
+    border-bottom-style: groove;
+    border-bottom-width: medium;
+}
+
+footer{
+    position: absolute;
+    float: left;
+    overflow: hidden;
+    bottom: 0;
+    width: 100%;
+    z-index: 999;
+    line-height: 5px;
+    background: linear-gradient(to bottom right, black, ghostwhite);
+    border-top-color: hotpink;
+    border-top-style: groove;
+    border-top-width: medium;
+    font-size: 20px;
+    font-weight: bold;
+    color: hotpink;
 }
 
 p {
@@ -41,28 +59,53 @@ p {
     margin: 10px;
 }
 
+
 nav {
-    display: block;
+    display: inline-block;
     text-align: center;
+    float: left;
+    list-style-type: none;
+    width: 100%;
 }
 
 nav li {
     display: inline-block;
     background-color: ghostwhite;
     padding: 10px 20px;
-    margin: 3px;
-    color: hotpink;
-    font-weight: bold;
+    margin: 5px 10px;
     outline-color: hotpink;
-    outline-style: inset
+    outline-style: inset;
+    color: hotpink;
 }
 
-#biz-header {
+li a {
+    color: hotpink;
+}
+
+section, .display_page {
+	min-height: 100vh;
+	min-width: 100vw;
+	border-bottom: 5px hotpink solid;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-    top: 50%;
-    bottom: 50%;
+    background:
+        linear-gradient(
+        rgba(255, 105, 200, 0.45), 
+        rgba(255, 105, 200, 0.45)),
+        url(../images/clean-closet.jpg);
+	background-size: cover;
+    position: relative;
+}
+
+
+#biz-header {
+	display: flex;
+    position: relative;
+	justify-content: center;
+	align-items: center;
+    top: 20%;
+    bottom: 20%;
 }
 
 
@@ -75,21 +118,23 @@ nav li {
     text-align: center;
 }
 
-#biz-name {
+.biz-name {
     color: hotpink;
-    font-size: 50px;
+    font-size: 80px;
     outline-color: black;
     outline-width: medium;
     outline-style: groove;
     background-color: ghostwhite;
     margin-bottom: auto;
     font-weight: bold;
-    margin-top: 100px;
+    margin-top: 10px;
+    padding: 10px;
+    position: relative;
 }
 
 .big-desc {
     color: hotpink;
-    font-size: 30px;
+    font-size: 40px;
     outline-color: hotpink;
     outline-width: medium;
     outline-style: groove;
@@ -101,3 +146,150 @@ nav li {
     font-weight: bold;
 }
 
+.other-desc{
+    background: background:
+        linear-gradient(
+        rgba(255, 105, 200, 0.45), 
+        rgba(255, 105, 200, 0.45));
+	background-size: contain;
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+    margin-top: 25px;
+    padding: 15px;
+}
+
+.desc-title {
+    color: ghostwhite;
+    font-size: 18px;
+    display: inline-block;
+    padding: 10px;
+    margin: 10px;
+    font-weight: bold;
+    text-decoration: overline;
+}
+
+
+#section_name {
+    padding: 10px;
+    font-size: 50px;
+    display: block;
+}
+
+.about-icon{
+    max-width: 100px;
+    max-height: 100px;
+    margin: 5px;
+}
+
+.icon-title {
+    background-color: rgba(255,248,255,0.7);
+    color: black;
+    font-weight: bold;
+    text-decoration-color: hotpink;
+    text-decoration-style: solid;
+    margin-top: 10px;
+    height: 100%;
+}
+
+.image-sect {
+    display: flex;
+	align-items: center;
+	justify-content: center;
+    margin-top: 20px;
+}
+
+.desc-text {
+    line-height: 1.4;
+}
+
+/*
+#right_panel {
+    float: right;
+    background-color: ghostwhite;
+    width: 50%;
+    background-height: 100%;
+    display: inline-block;
+}
+
+#left_panel {
+    float: left;
+    background-color: hotpink;
+    width: 50%;
+    background-height: 100%;
+    display: inline-block;
+}*/
+
+
+/*
+.preview {
+    width: 20%;
+    border: 4px solid ghostwhite;
+    margin: 5px;
+    display: inline-block;
+    margin-bottom: 10px;
+}
+
+#packed1, #clothes1 {
+    display: none;
+}
+
+#image{
+    height: auto;
+    width: 100%;
+    margin: 0 auto;
+    margin-top: 10px;
+    background-image: url("../images/closet1.jpg")
+    background-size: contain;
+    margin-bottom: 15px;
+}
+
+.thumbnail {
+    display: inline-block;
+}
+*/
+
+.grid {
+    display: block;                      
+    flex-wrap: wrap;               
+    justify-content: space-around;
+}
+.cell {
+    flex: 0 0 90%;
+    max-height: 200px;
+    min-height: 30%;
+    max-width: 200px;
+    min-width: 20%;
+    background-size: cover;
+    margin: 15px;
+}
+
+#gallery {
+    width: 100%;
+    position: absolute;
+}
+
+#contact-form {
+    margin: 20px;
+    background-color: hotpink;
+    height: 200px;
+}
+
+input, textarea {
+    width: 80%;
+    margin: 15px 0px;
+    border: 2px solid black;
+    padding: 5px;
+}
+
+button {
+    font-size: 20px;
+    width: 40%;
+    background-color: black;
+    color: hotpink;
+    font-weight: bold;
+}
+
+.current-page {
+    background-color: black;
+}
