--- a/Personal-Portfolio/css/style.css
+++ b/Personal-Portfolio/css/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 620px){
+@media only screen and (max-width: 480px){
 	header ul {
 		display: block;
 		float: none;
@@ -6,7 +6,11 @@
 	header ul li { 
 		float: none;
 		border-top: 2px solid hotpink;
+		font-size: 11px;
 	}
+	img { display: block; 
+	}
+	
 }
 
 body {
